// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders default 1`] = `
<nav
  aria-label="Breadcrumb"
>
  <ol
    className="flex flex-wrap gap-2 items-center text-moon-12"
  >
    <li
      className="flex items-center gap-2 text-trunks"
    >
      <span
        className="text-trunks transition-colors duration-200 hover:text-bulma"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Moon.io
        </a>
      </span>
    </li>
    <li
      className="flex items-center gap-2 text-trunks"
    >
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
      <span
        className="text-trunks transition-colors duration-200 hover:text-bulma"
      >
        <a
          href="/breadcrumb_item_1"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Breadcrumb item 1
        </a>
      </span>
    </li>
    <li
      className="flex items-center gap-2 text-trunks"
    >
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
      <span
        className="text-trunks transition-colors duration-200 hover:text-bulma"
      >
        <a
          href="/breadcrumb_item_2"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Breadcrumb item 2
        </a>
      </span>
    </li>
    <li
      className="flex items-center gap-2 text-trunks"
    >
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
      <span
        className="text-trunks transition-colors duration-200 hover:text-bulma text-bulma font-semibold"
      >
        <span
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Breadcrumb item 3
        </span>
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Avatar renders more then 4 items 1`] = `
<nav
  aria-label="Breadcrumb"
>
  <ol
    className="flex flex-wrap gap-2 items-center text-moon-12"
  >
    <li
      className="flex items-center gap-2 text-trunks"
    >
      <span
        className="text-trunks transition-colors duration-200 hover:text-bulma"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Moon.io
        </a>
      </span>
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </li>
    <li
      className="relative"
    >
      <button
        className="p-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden select-none outline-none transition duration-200 active:scale-90 focus-visible:shadow-focus text-trunks bg-transparent hover:text-bulma"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
            stroke="currentColor"
            strokeLinecap="round"
          />
        </svg>
        <div
          className="z-[-1] absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
        />
      </button>
    </li>
    <li
      className="flex items-center gap-2 text-trunks"
    >
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
      <span
        className="text-trunks transition-colors duration-200 hover:text-bulma"
      >
        <a
          href="/breadcrumb_item_4"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Breadcrumb item 4
        </a>
      </span>
    </li>
    <li
      className="flex items-center gap-2 text-trunks"
    >
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
      <span
        className="text-trunks transition-colors duration-200 hover:text-bulma text-bulma font-semibold"
      >
        <span
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Breadcrumb item 5
        </span>
      </span>
    </li>
  </ol>
</nav>
`;
